# me-model-analysis

./: .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS.md  Dockerfile  Makefile  README.md  docker-cmd.sh  docker-compose.yml  entrypoint.sh  logging.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-production-image.yml  publish-staging-image.yml
app/: __init__.py  __main__.py  actions.py  apigw.py  application.py  config.py  entitycore_helper.py  handler.py  nexus_helper.py  types.py
me_model_analysis/: actions.py  handler.py  main.py  nexus_helper.py  settings.py
nexus/: forge-production.yml  forge.yml  forge_ontology_path.yml
